--- a/project/src/main/res/values/integers.xml
+++ b/project/src/main/res/values/integers.xml
@@ -285,4 +285,7 @@
     <integer name="lx_detail_content_description_max_lines">5</integer>
     <integer name="lx_offer_ticket_default_count">1</integer>
 
+    <!-- The maximum selectable date range for LX, end date selection is disabled -->
+    <integer name="calendar_max_selection_date_range_lx">0</integer>
+
 </resources>
