--- a/project/src/main/res/layout/lx_details_presenter.xml
+++ b/project/src/main/res/layout/lx_details_presenter.xml
@@ -93,10 +93,10 @@
                         <com.expedia.bookings.widget.ShowMoreWithCountWidget
                             android:id="@+id/show_more_widget"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginBottom="8dp"
-                            android:layout_marginTop="8dp" />
+                            android:orientation="horizontal"
+                            android:padding="10dp"/>
 
                     </LinearLayout>
                 </com.expedia.bookings.widget.LXOffersListWidget>
