--- a/project/src/main/res/layout/show_more_with_count_layout.xml
+++ b/project/src/main/res/layout/show_more_with_count_layout.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/more_offer_count"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/lx_show_more_background"
         android:gravity="center"
-        android:padding="6dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:paddingTop="1dp"
+        android:includeFontPadding="false"
         android:textColor="@android:color/white"
-        android:textSize="11sp" />
+        android:textSize="12sp" />
 
-    <TextView
+    <com.expedia.bookings.widget.TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="5dp"
+        android:layout_height="match_parent"
+        android:paddingLeft="4dp"
         android:text="@string/lx_show_more_offers"
         android:textColor="@color/lx_primary_color"
-        android:textSize="13sp"
-        android:textStyle="bold" />
+        android:gravity="center"
+        android:textSize="15sp"
+        app:textStyle="medium" />
 </merge>
