--- a/project/src/main/res/layout/widget_lx_detail_section_data.xml
+++ b/project/src/main/res/layout/widget_lx_detail_section_data.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="?attr/selectableItemBackground"
-    android:paddingBottom="15dp"
+    android:paddingBottom="20dp"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
     android:id="@+id/section_container">
@@ -26,6 +26,7 @@
         android:textColor="@color/lx_details_content_text_color"
         android:lineSpacingExtra="3dp"
         android:textSize="12sp"
+        android:layout_marginTop="2dp"
         app:textStyle="normal"/>
 
     <ImageButton
