--- a/project/src/main/res/layout/fragment_booking_overview.xml
+++ b/project/src/main/res/layout/fragment_booking_overview.xml
@@ -43,6 +43,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="1.5dp"
+                        android:layout_marginRight="1.5dp"
                         android:layout_marginTop="4dp"
                         layout="@layout/include_account_button" />
 
@@ -51,6 +53,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="1.5dp"
+                        android:layout_marginRight="1.5dp"
                         layout="@layout/include_wallet_button" />
 
                     <LinearLayout
