--- a/project/src/main/res/layout/lx_base_layout.xml
+++ b/project/src/main/res/layout/lx_base_layout.xml
@@ -33,4 +33,11 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
+    <com.expedia.bookings.widget.LXConfirmationWidget
+        android:id="@+id/confirmation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/lx_confirmation_background"
+        android:visibility="gone"/>
+
 </com.expedia.bookings.presenter.lx.LXPresenter>
