4492 - Long title getting cut off on search results cards. Ellipsize it.

--- a/project/src/main/res/layout/section_lx_search_row.xml
+++ b/project/src/main/res/layout/section_lx_search_row.xml
@@ -43,6 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_weight="1"
+                android:ellipsize="end"
                 android:gravity="left"
                 android:maxLines="2"
                 android:textColor="@android:color/white"
