--- a/project/src/main/res/layout/car_lx_loading_animation_widget.xml
+++ b/project/src/main/res/layout/car_lx_loading_animation_widget.xml
@@ -5,7 +5,9 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    card_view:cardCornerRadius="3dp"
+    android:layout_marginLeft="@dimen/car_search_list_image_container_margin"
+    android:layout_marginRight="@dimen/car_search_list_image_container_margin"
+    card_view:cardCornerRadius="4dp"
     card_view:cardElevation="1dp">
 
     <com.expedia.bookings.widget.OptimizedImageView
