--- a/project/src/main/res/layout/section_lx_search_row.xml
+++ b/project/src/main/res/layout/section_lx_search_row.xml
@@ -5,8 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/car_search_list_image_container_margin"
+    android:layout_marginRight="@dimen/car_search_list_image_container_margin"
     android:foreground="?android:attr/selectableItemBackground"
-    app:cardCornerRadius="3dp"
+    app:cardCornerRadius="4dp"
     app:cardElevation="1dp">
 
     <FrameLayout
