--- a/project/src/wotif/res/values/colors.xml
+++ b/project/src/wotif/res/values/colors.xml
@@ -9,4 +9,30 @@
     <color name="lob_box_shadow_center_color">#99000000</color>
     <color name="lob_box_shadow_end_color">#00000000</color>
 
+    <color name="bg_blue_color_wotif">#003e74</color>
+    <color name="actionbar_button_background_pressed">#004888</color>
+    <color name="action_bar_text_blue_wotif">#7baed4</color>
+    <color name="bg_btn_color_wotif">#7bae00</color>
+    <color name="bg_btn_pressed_color_wotif">#295600</color>
+    <color name="itin_flight_line_color_wotif">#7da426</color>
+    <color name="login_text_hotels">#FFFFFF</color>
+    <color name="login_text_flight">#FFFFFF</color>
+    <color name="coupon_success_message_color_wotif">#7baed4</color>
+    <color name="collection_overlay_color">#56a1d5</color>
+    <color name="hotel_room_rate_select_room_button_wotif">#53A0D3</color>
+    <color name="hotel_room_rate_select_room_button_pressed_wotif">#004E93</color>
+    <color name="hotel_room_rate_add_room_button_wotif">#608405</color>
+    <color name="hotel_room_rate_add_room_button_pressed_wotif">#2F5806</color>
+    <color name="launch_pin_detail_button_text_wotif">#D1EAFF</color>
+
+    <color name="hotel_price_text_color"> #1972B2</color>
+    <color name="hotel_price_sale_text_color">#599027</color>
+    <color name="actionbar_text_wotif">#4F4F4F</color>
+    <color name="actionbar_text">#4F4F4F</color>
+    <color name="menu_bar_text_color">#DDDFE1</color>
+    <color name="actionbar_suggestion_text_color">#DDDFE1</color>
+
+    <color name="flight_trip">#1972B2</color>
+    <color name="flight_trip_price">#1972B2</color>
+
 </resources>
