--- a/project/src/wotif/res/layout/wotif_section_phone_launch_lob.xml
+++ b/project/src/wotif/res/layout/wotif_section_phone_launch_lob.xml
@@ -8,7 +8,12 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="8dp"
+        android:layout_height="1dp"
+        android:background="#CACACA" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
         android:background="@color/launch_lob_bg" />
 
     <FrameLayout
