fix car checkout alignment

--- a/project/src/main/res/layout/traveler_contact_details_widget.xml
+++ b/project/src/main/res/layout/traveler_contact_details_widget.xml
@@ -122,9 +122,10 @@
 
             <com.expedia.bookings.widget.TelephoneSpinner
                 android:id="@+id/edit_phone_number_country_code_spinner"
-                style="@style/Widget.Spinner.Phone"
+                style="@style/CarFakeSpinner.Light"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:layout_weight="1" />
 
             <EditText
