--- a/project/src/main/res/layout/payment_widget.xml
+++ b/project/src/main/res/layout/payment_widget.xml
@@ -157,6 +157,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
+                    android:layout_marginRight="10dp"
                     android:bufferType="spannable"
                     android:hint="@string/expiration_date"
                     android:textSize="18dp" />
@@ -181,18 +182,11 @@
                 android:id="@+id/cardholder_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="5dp"
                 android:text="@string/cardholder"
                 android:paddingLeft="4dp"
                 android:textSize="@dimen/data_form_section_header_text"
                 android:textStyle="bold" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#635C5C5C"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"/>
 
             <EditText
                 android:id="@+id/edit_name_on_card"
