--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -104,9 +104,15 @@
         <item name="android:paddingRight">20dp</item>
     </style>
 
-    <style name="CarFakeSpinner.Light" parent="V2.Theme.Cars">
-        <item name="android:background">@drawable/fake_spinner_default_holo_light</item>
-        <item name="android:textColor">@color/cars_actionbar_text_color</item>
+    <style name="CarFakeSpinner.Light" parent="@style/Widget.AppCompat.EditText">
+        <item name="android:drawableRight">@drawable/material_dropdown</item>
+        <item name="android:inputType">none</item>
+        <item name="android:focusable">false</item>
+        <item name="android:focusableInTouchMode">false</item>
+        <item name="android:editable">false</item>
+        <item name="android:cursorVisible">false</item>
+        <item name="android:longClickable">false</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="CarsCardView" parent="V2.Theme.Cars">
