--- a/project/src/wotif/res/layout/widget_phone_launch_btn.xml
+++ b/project/src/wotif/res/layout/widget_phone_launch_btn.xml
@@ -6,22 +6,20 @@
         android:id="@+id/lob_btn_bg"
         android:layout_width="match_parent"
         android:layout_height="@dimen/launch_lob_height"
+        android:layout_gravity="center"
         android:foreground="?android:attr/selectableItemBackground"
-        android:orientation="vertical"
-        android:paddingBottom="15dp"
-        android:paddingTop="15dp">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/icon"
             android:layout_width="@dimen/launch_lob_icon_size"
-            android:layout_height="@dimen/launch_lob_icon_size"
-            android:layout_gravity="center" />
+            android:layout_height="@dimen/launch_lob_icon_size" />
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
             android:textStyle="bold" />
