Adding attribute for spacer height in checkout widget

--- a/project/src/main/res/layout/widget_checkout_base.xml
+++ b/project/src/main/res/layout/widget_checkout_base.xml
@@ -99,7 +99,7 @@
             <Space
                 android:id="@+id/spacer"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/car_unexpanded_space_height" />
+                android:layout_height="?attr/checkout_unexpanded_space_height" />
         </LinearLayout>
     </com.expedia.bookings.widget.ScrollView>
 
