--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -262,6 +262,7 @@
     <dimen name="lx_sort_filter_container_height">58dp</dimen>
     <dimen name="lx_sort_filter_padding">16dp</dimen>
     <dimen name="lx_sort_filter_margin">16dp</dimen>
+    <dimen name="lx_unexpanded_space_height">190dp</dimen>
 
     <!-- Car Search  -->
     <dimen name="car_calendar_month_view_max_text_size">12dp</dimen>
