--- a/project/src/main/res/drawable-v21/lx_ticket_minus_button_selector.xml
+++ b/project/src/main/res/drawable-v21/lx_ticket_minus_button_selector.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#ACACAC">
+    android:color="@color/lx_sort_filter_pressed_row_color">
     <item>
         <selector>
             <item
                 android:drawable="@drawable/lx_minus_icon_disabled"
                 android:state_enabled="false" />
 
-            <item
-                android:drawable="@drawable/lx_minus_icon"
-                android:state_pressed="true" />
             <item android:drawable="@drawable/lx_minus_icon" />
         </selector>
     </item>
