--- a/project/src/main/res/layout/lx_ticket_picker.xml
+++ b/project/src/main/res/layout/lx_ticket_picker.xml
@@ -20,8 +20,9 @@
         android:id="@+id/ticket_remove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/lx_ticket_minus_button_selector"
-        android:gravity="center" />
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:gravity="center"
+        android:src="@drawable/lx_ticket_minus_button_selector" />
 
     <TextView
         android:id="@+id/ticket_count"
@@ -37,7 +38,8 @@
         android:id="@+id/ticket_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/lx_ticket_plus_button_selector"
-        android:gravity="center" />
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:gravity="center"
+        android:src="@drawable/lx_ticket_plus_button_selector" />
 
 </com.expedia.bookings.widget.LXTicketPicker>
