--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -271,5 +271,6 @@
     <color name="lx_sort_filter_text_color">#404040</color>
     <color name="lx_sort_filter_pressed">#D9D9D9</color>
     <color name="lx_sort_filter_top_bar_text_color">#5C5C5C</color>
+    <color name="lx_sort_filter_pressed_row_color">#D8D8D8</color>
 
 </resources>
