Launch button scaling polish
In the four-button case, icons need to start as bottom-aligned.
As the list scrolls, the icons need to become center-aligned
and fill the button. Translation magic was necessary.

Kept the attr to adjust the min icon scaling in the case that we
need to tweak.

--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -30,6 +30,7 @@
     <dimen name="launch_lob_squashed_height">80dp</dimen>
     <dimen name="launch_lob_double_row_height">76dp</dimen>
     <dimen name="launch_lob_double_row_container_height">197dp</dimen>
+    <dimen name="launch_lob_double_row_squashed_height">112dp</dimen>
     <dimen name="launch_lob_margin">8dp</dimen>
     <dimen name="launch_list_corner_radius">2dp</dimen>
 
