--- a/project/src/main/res/layout/section_phone_launch_double_row_lob.xml
+++ b/project/src/main/res/layout/section_phone_launch_double_row_lob.xml
@@ -40,7 +40,8 @@
                 android:layout_weight="1"
                 app:btn_bg="@drawable/bg_lob_hotels"
                 app:btn_icon="@drawable/ic_launch_hotels"
-                app:btn_text="@string/nav_hotels" />
+                app:btn_text="@string/nav_hotels"
+                app:icon_min_scale=".75" />
 
             <com.expedia.bookings.widget.PhoneLaunchDoubleRowButton
                 android:id="@+id/flights_button"
@@ -50,7 +51,8 @@
                 android:layout_weight="1"
                 app:btn_bg="@drawable/bg_lob_flights"
                 app:btn_icon="@drawable/ic_launch_flights"
-                app:btn_text="@string/nav_flights" />
+                app:btn_text="@string/nav_flights"
+                app:icon_min_scale=".75" />
         </LinearLayout>
     </FrameLayout>
 
@@ -89,7 +91,8 @@
                 android:layout_weight="1"
                 app:btn_bg="@drawable/bg_lob_cars"
                 app:btn_icon="@drawable/ic_launch_cars"
-                app:btn_text="@string/nav_cars" />
+                app:btn_text="@string/nav_cars"
+                app:icon_min_scale=".75" />
 
             <com.expedia.bookings.widget.PhoneLaunchDoubleRowButton
                 android:id="@+id/activities_button"
@@ -99,7 +102,8 @@
                 android:layout_weight="1"
                 app:btn_bg="@drawable/bg_lob_activities"
                 app:btn_icon="@drawable/ic_launch_activities"
-                app:btn_text="@string/nav_lx" />
+                app:btn_text="@string/nav_lx"
+                app:icon_min_scale=".75" />
         </LinearLayout>
 
     </FrameLayout>
