--- a/project/src/main/res/layout/widget_phone_launch_double_row_btn.xml
+++ b/project/src/main/res/layout/widget_phone_launch_double_row_btn.xml
@@ -12,9 +12,7 @@
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|left"
-        android:alpha="0.3"
-        android:paddingTop="5dp" />
+        android:alpha="0.3" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/text"
