--- a/project/src/wotif/res/values/themes.xml
+++ b/project/src/wotif/res/values/themes.xml
@@ -242,4 +242,9 @@
         <item name="titleTextStyle" tools:targetApi="11">@style/TitleBarTextColor</item>
         <item name="android:homeAsUpIndicator" tools:targetApi="11">@drawable/ic_action_bar_back_arrow_wotif</item>
     </style>
+
+    <style name="FlightTheme.OverlayMode">
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:actionMenuTextColor">@color/menu_bar_text_color</item>
+    </style>
 </resources>
