Created attr for colors of main to override in Wotif

--- a/project/src/main/res/layout/actionbar_legend.xml
+++ b/project/src/main/res/layout/actionbar_legend.xml
@@ -10,6 +10,6 @@
     android:paddingLeft="3dp"
     android:paddingRight="8dp"
     android:text="@string/legend"
-    android:textColor="@color/itin_white_text"
+    android:textColor="?attr/skin_terminal_chooser_text_color"
     android:textSize="12dp"
     android:textStyle="bold" />
