--- a/project/src/main/res/layout/activity_flight_overview_and_checkout.xml
+++ b/project/src/main/res/layout/activity_flight_overview_and_checkout.xml
@@ -47,7 +47,7 @@
                     android:gravity="center"
                     android:visibility="gone"
                     android:text="@string/ab_test_flights_free_cancellation"
-                    android:textColor="#FFE980"/>
+                    android:textColor="?attr/skin_flight_free_cancellation_text_color"/>
 
                 <com.expedia.bookings.widget.TouchableFrameLayout
                     android:id="@+id/checkout_event_blocker"
