--- a/project/src/wotif/res/values/colors.xml
+++ b/project/src/wotif/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color name="hotel_room_rate_add_room_button_pressed_wotif">#2F5806</color>
     <color name="launch_pin_detail_button_text_wotif">#D1EAFF</color>
 
-    <color name="hotel_price_text_color"> #1972B2</color>
+    <color name="hotel_price_text_color">#1972B2</color>
     <color name="hotel_price_sale_text_color">#599027</color>
     <color name="actionbar_text_wotif">#4F4F4F</color>
     <color name="actionbar_text">#4F4F4F</color>
@@ -34,8 +34,9 @@
 
     <color name="flight_trip">#1972B2</color>
     <color name="flight_trip_price">#1972B2</color>
+    <color name="flight_free_cancellation_text_color_wotif">#7AC231</color>
+
     <color name="action_bar_flight_text_color">@color/actionbar_text_wotif</color>
     <color name="action_bar_flight_cancel_text_color">@color/actionbar_text_wotif</color>
     <color name="action_bar_flight_result_separator_color">#999999</color>
-
 </resources>
