Created attr for colors of main to override in Wotif

--- a/project/src/main/res/layout/include_itin_card_title_hotel.xml
+++ b/project/src/main/res/layout/include_itin_card_title_hotel.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:singleLine="true"
-        android:textColor="@color/itin_white_text"
+        android:textColor="?attr/skin_itinCardTitleTextColor"
         android:textSize="16dp"
         app:textStyle="normal" />
 
