--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -198,6 +198,9 @@
     <attr name="skin_loadingAirAsiaRoutesString" format="reference|string" />
     <attr name="skin_emailUserNameString" format="reference|string" />
     <attr name="skin_itineraryNumberString" format="reference|string" />
+    <attr name="skin_itinCardOverflowDrawable" format="reference"/>
+    <attr name="skin_itinCardActionBarCheckmark" format="reference"/>
+    <attr name="skin_itinCardTitleTextColor" format="reference"/>
 
     <!-- Room not Available Error Msg-->
     <attr name="skin_roomNotAvailableError" format="string"/>
