--- a/project/src/main/res/layout/car_results_presenter.xml
+++ b/project/src/main/res/layout/car_results_presenter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.presenter.CarResultsPresenter xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,13 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#eaeaea"
-        android:visibility="gone">
+        android:visibility="invisible">
 
         <FrameLayout
             android:id="@+id/background_header"
-            android:layout_gravity="top"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="top">
 
             <com.expedia.bookings.widget.OptimizedImageView
                 android:id="@+id/header_image"
@@ -42,12 +43,6 @@
         android:id="@+id/categories"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <com.expedia.bookings.widget.ErrorWidget
-            android:id="@+id/search_error_widget"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#FFFFFF"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/category_list"
@@ -103,5 +98,71 @@
         </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
+
+    <LinearLayout
+        android:id="@+id/sort_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:layout_gravity="bottom"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/drop_shadow" />
+
+        <LinearLayout
+            android:id="@+id/sort_filter_button"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/sort_filter_selector"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/filter_number_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/filter_number_bg"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:textColor="#ffffff"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/filter_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:src="@drawable/sort" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="@string/filter"
+                android:textAllCaps="false"
+                android:textColor="@color/text_black"
+                android:textSize="16sp"
+                app:textStyle="medium" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <com.expedia.bookings.widget.CarFilterWidget
+        android:id="@+id/filter"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#EFEFEF"
+        android:visibility="invisible" />
+
+    <com.expedia.bookings.widget.ErrorWidget
+        android:id="@+id/search_error_widget"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFFFFF" />
 
 </com.expedia.bookings.presenter.CarResultsPresenter>
