--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="V2.Theme.Cars" parent="AppTheme.Base"/>
+    <style name="V2" />
+
+    <style name="V2.Theme" />
+
+    <style name="V2.Widget" />
+
+    <style name="V2.Theme.Cars" parent="AppTheme.Base" />
 
     <style name="AppTheme.Base" parent="@style/Theme.AppCompat.Light">
         <item name="windowActionBar">false</item>
@@ -103,7 +109,7 @@
         <item name="android:ellipsize">end</item>
     </style>
 
-    <style name="CarButton" parent="android:Widget.Button" >
+    <style name="CarButton" parent="android:Widget.Button">
         <item name="android:background">@color/cars_primary_color</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textAllCaps">false</item>
@@ -187,4 +193,11 @@
         <item name="colorControlHighlight">#FFFFFF</item>
     </style>
 
+    <style name="CarFilterTitleTextAppearance" parent="V2.Theme.Cars">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#5C5C5C</item>
+    </style>
+    
 </resources>
