--- a/project/src/main/res/layout/section_lx_search_row.xml
+++ b/project/src/main/res/layout/section_lx_search_row.xml
@@ -55,10 +55,9 @@
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/activity_price"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right"
-                android:layout_weight="1"
                 android:gravity="right"
                 android:textColor="@android:color/white"
                 android:textSize="16sp"
