--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -201,6 +201,7 @@
     <dimen name="login_bottom_room_spacing">6dp</dimen>
 
     <!-- Account / Login button -->
+    <dimen name="account_button_height">40dp</dimen>
     <dimen name="account_button_margin_top">12dp</dimen>
     <dimen name="account_button_padding">0dp</dimen>
     <dimen name="wallet_button_bottom_margin">8dp</dimen>
