Bug Fix: 1. #2562 (Bug)Wotif- Filter overlay -Text not visible on 'Filter by Hotel Name' 2. #2524 Wotif : Search clear button ( the X icon) is not visible

--- a/project/src/airAsiaGo/res/values/themes.xml
+++ b/project/src/airAsiaGo/res/values/themes.xml
@@ -114,6 +114,7 @@
         <item name="skin_flightCalendarDatePickerCellDrawable">@drawable/calendar_date_picker_cell_aag</item>
         <item name="skin_flightCalendarDatePickerPopupDrawable">@drawable/calendar_date_picker_popup_aag</item>
         <item name="skin_flightCheckoutAccountLabel">@string/aag_account</item>
+        <item name="skin_flightFreeCancellationTextColor">@color/flight_free_cancellation_text_color</item>
     </style>
 
     <!-- Override the phone theme -->
