--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -231,7 +231,9 @@
     <style name="Theme.Phone" parent="@style/Theme.Expedia" />
 
     <!-- Inherit Wotif or others theme based on desired project -->
-    <style name="Theme.Phone.HotelSearchActivity" parent="@style/Theme.Phone" />
+    <style name="Theme.Phone.HotelSearchActivity" parent="@style/Theme.Phone">
+        <item name="skin_hotelSearchPopupFilterTextColor">@color/actionbar_text</item>
+    </style>
 
     <style name="Theme.Phone.NoActionBar">
         <item name="android:windowActionBar">false</item>
