--- a/project/src/main/res/layout/popup_filter_options.xml
+++ b/project/src/main/res/layout/popup_filter_options.xml
@@ -30,7 +30,7 @@
             android:hint="@string/filter_hotel_name_hint"
             android:inputType="textFilter|textNoSuggestions"
             android:singleLine="true"
-            android:textColor="@color/actionbar_text"
+            android:textColor="?attr/skin_hotelSearchPopupFilterTextColor"
             android:textCursorDrawable="@null"
             android:textSize="18dp"
             mobiata:clearFieldDrawable="@drawable/ic_clear_edittext_dark"
