Introducing Mock Mode
Yet another API debug setting. Spins up the MockWebServer and behaves
similarly to our UI automation tests. Such win. Also, clean up dev
API settings - no more:

- Trunk Stubbed
- Mock Server
- Proxy
- Stable

--- a/project/src/main/res/values/arrays.xml
+++ b/project/src/main/res/values/arrays.xml
@@ -796,14 +796,11 @@
 
     <string-array name="api_names" tools:ignore="MissingTranslation">
         <item>Production</item>
-        <item>Dev</item>
         <item>Integration</item>
-        <item>Stable</item>
-        <item>Trunk</item>
-        <item>Proxy</item>
-        <item>Mock Server</item>
         <item>Public Integration</item>
-        <item>Trunk (Stubbed)</item>
+        <item>Trunk</item>
+        <item>Dev</item>
+        <item>Mock Mode</item>
         <item>Custom Server</item>
     </string-array>
 
