Wotif: 2584- Added new assets for map pins

--- a/project/src/wotif/res/values/themes.xml
+++ b/project/src/wotif/res/values/themes.xml
@@ -30,6 +30,7 @@
         <item name="skin_hotelDetailPlaceHolderDrawable">@drawable/placeholder_lg_wotif_detail_screen</item>
         <item name="skin_hotelListingUserRatingStyle">@style/RatingBar.UserReview.Blue</item>
         <item name="skin_ratingBarUserReviewStyle">@style/RatingBar.UserReview.Blue</item>
+        <item name="skin_hotelListMapMarkerSaleDrawable">@drawable/map_pin_sale_wotif</item>
         <item name="skin_hotelListMapMarkerDrawable">@drawable/map_pin_normal_wotif</item>
         <item name="skin_bestPriceGuaranteeString">@string/wotif_best_price_guarantee</item>
         <item name="skin_costSummaryDialogStripeDrawable">@drawable/dialog_breakdown_stripe_wotif</item>
