--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -200,7 +200,7 @@
     <attr name="skin_itineraryNumberString" format="reference|string" />
     <attr name="skin_itinCardOverflowDrawable" format="reference"/>
     <attr name="skin_itinCardActionBarCheckmark" format="reference"/>
-    <attr name="skin_itinCardTitleTextColor" format="reference"/>
+    <attr name="skin_itinCardTitleTextColor" format="reference|color"/>
 
     <!-- Room not Available Error Msg-->
     <attr name="skin_roomNotAvailableError" format="string"/>
