4526. HSR Map view: hotel pins with discount in green
Changing map pin to green in hotel search for when user is bucketed.
Also we change the same on the detail screen.

--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -119,6 +119,7 @@
     <!-- HotelCheckout Traveler Info screen after logged in, Logo to the left of the primary traveler -->
     <attr name="skin_hotelPrimaryTravelerInfoLogoDrawable" format="reference" />
     <attr name="skin_hotelListMapMarkerSaleDrawable" format="reference" />
+    <attr name="skin_hotelListMapMarkerSaleGreenABTestDrawable" format="reference" />
     <attr name="skin_hotelListMapMarkerDrawable" format="reference" />
     <attr name="skin_hotelListMapMarkerAirAttachDrawable" format="reference" />
 
