--- a/project/src/main/res/xml/preferences_dev.xml
+++ b/project/src/main/res/xml/preferences_dev.xml
@@ -234,6 +234,14 @@
             android:summary="Select a test group"
             android:title="Flight Confirmation Car Cross sell" />
 
+        <ListPreference
+            android:entries="@array/abacus_default_choices"
+            android:entryValues="@array/abacus_default_choice_values"
+            android:defaultValue="@string/preference_abacus_default"
+            android:key="@string/preference_hotel_search_sale_pin"
+            android:summary="Select a test group"
+            android:title="Hotel Search Sale Pin Green" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Push" >
