--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -150,6 +150,7 @@
         <item name="skin_hotelPrimaryTravelerInfoLogoDrawable">@drawable/ic_expedia_white_logo_small</item>
         <item name="skin_hotelListMapMarkerAirAttachDrawable">@drawable/map_pin_airattach</item>
         <item name="skin_hotelListMapMarkerSaleDrawable">@drawable/map_pin_sale</item>
+        <item name="skin_hotelListMapMarkerSaleGreenABTestDrawable">@drawable/map_pin_sale_green</item>
         <item name="skin_hotelListMapMarkerDrawable">@drawable/map_pin_normal</item>
         <item name="skin_hotelImagePlaceHolderDrawable">@drawable/ic_image_placeholder</item>
         <item name="skin_hotelWebViewActionBarLogo">@drawable/ic_logo_hotels</item>
