--- a/project/src/main/res/layout/section_launch_list_card.xml
+++ b/project/src/main/res/layout/section_launch_list_card.xml
@@ -16,6 +16,7 @@
         android:scaleType="centerCrop" />
 
     <View
+        android:id="@+id/gradient"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/launch_hotels_gradient_bottom" />
